--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                     </span>
                     <!-- Code Link. -->
                     <span class="link-block">
-                        <a class="external-link button is-normal is-rounded is-dark"  href="">
+                        <a class="external-link button is-normal is-rounded is-dark"  href="https://github.com/helia95/VASE">
                           <span class="icon">
                               <i class="fab fa-github"></i>
                           </span>
-                          <span>Code (coming soon)</span>
+                          <span>Code</span>
                        </a>
                   </span>
 		    </div>
