--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <!-- Arxiv Link. -->
                     <span class="link-block">
                         <a class="external-link button is-normal is-rounded is-dark"
-                           href="https://arxiv.org/">
+                           href="https://arxiv.org/abs/2401.02473">
                           <span class="icon">
                               <i class="ai ai-arxiv"></i>
                           </span>
@@ -614,11 +614,17 @@
 
 <hr>
 <!--BibTex citation -->
-  <section class="section" id="BibTeX">
+  <section class="section" id="Citation">
     <div class="container is-max-desktop content">
       <h2 class="title is-2 is-centered has-text-centered">BibTeX</h2>
-      <pre><code>
-
+        <pre><code>
+        @misc{peruzzo2024vase,
+          title={VASE: Object-Centric Appearance and Shape Manipulation of Real Videos},
+          author={Elia Peruzzo and Vidit Goel and Dejia Xu and Xingqian Xu and Yifan Jiang and Zhangyang Wang and Humphrey Shi and Nicu Sebe},
+          year={2024},
+          eprint={2401.02473},
+          archivePrefix={arXiv},
+          primaryClass={cs.CV}}
       </code></pre>
     </div>
 </section>
